--- a/P1_Robot_Controller/Robot Controller.ipynb
+++ b/P1_Robot_Controller/Robot Controller.ipynb
@@ -61,13 +61,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "maze-id 1-1536317736\n",
+      "[[3, 2, 2, 2, 2, 2, 2, 2, 1],\n",
+      " [0, 0, 2, 2, 2, 2, 2, 0, 0],\n",
+      " [2, 0, 0, 2, 2, 2, 0, 0, 2],\n",
+      " [2, 2, 0, 0, 2, 0, 0, 2, 2],\n",
+      " [2, 2, 2, 0, 0, 0, 2, 2, 2]]\n"
+     ]
+    }
+   ],
    "source": [
     "import helper\n",
+    "import random\n",
+    "import copy\n",
     "\n",
-    "env_data = helper.fetch_maze()"
+    "env_data = helper.fetch_maze()\n",
+    "graph = copy.deepcopy(env_data)"
    ]
   },
   {
@@ -85,18 +101,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "迷宫共有 5 行 9 列，第三行第六列的元素是 2\n"
+     ]
+    }
+   ],
    "source": [
     "#TODO 1模拟环境的行数\n",
-    "rows = None \n",
+    "rows = len(env_data) \n",
     "\n",
     "#TODO 2模拟环境的列数\n",
-    "columns = None \n",
+    "columns = len(env_data[0]) \n",
     "\n",
     "#TODO 3取出模拟环境第三行第六列的元素\n",
-    "row_3_col_6 = None \n",
+    "row_3_col_6 = env_data[2][5]\n",
     "\n",
     "print(\"迷宫共有\", rows, \"行\", columns, \"列，第三行第六列的元素是\", row_3_col_6)"
    ]
@@ -122,24 +146,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "迷宫中，第一行共有 7 个障碍物，第三列共有 3 个障碍物。\n"
+     ]
+    }
+   ],
    "source": [
     "#TODO 4计算模拟环境中，第一行的的障碍物个数。\n",
-    "number_of_barriers_row1 = None\n",
+    "number_of_barriers_row1 = 0\n",
+    "for v in env_data[0]:\n",
+    "    if v == 2:\n",
+    "        number_of_barriers_row1 = number_of_barriers_row1+1\n",
     "\n",
     "#TODO 5计算模拟环境中，第三列的的障碍物个数。\n",
-    "number_of_barriers_col3 = None\n",
+    "number_of_barriers_col3 = 0\n",
+    "for v in env_data:\n",
+    "    if v[2] == 2:\n",
+    "        number_of_barriers_col3 = number_of_barriers_col3+1\n",
     "\n",
     "print(\"迷宫中，第一行共有\", number_of_barriers_row1, \"个障碍物，第三列共有\", number_of_barriers_col3, \"个障碍物。\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      ".\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 1 test in 0.001s\n",
+      "\n",
+      "OK\n"
+     ]
+    }
+   ],
    "source": [
     "%run -i -e test.py RobotControllortTestCase.test_cal_barriers"
    ]
@@ -158,20 +208,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "loc_map = {} #TODO 6按照上述要求创建字典\n",
+    "loc_map = {\n",
+    "    'start':(0,8),\n",
+    "    'destination':(0,0)\n",
+    "} #TODO 6按照上述要求创建字典\n",
     "\n",
-    "robot_current_loc = None #TODO 7保存机器人当前的位置"
+    "robot_current_loc = loc_map['start'] #TODO 7保存机器人当前的位置"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      ".\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 1 test in 0.001s\n",
+      "\n",
+      "OK\n"
+     ]
+    }
+   ],
    "source": [
     "%run -i -e test.py RobotControllortTestCase.test_cal_loc_map"
    ]
@@ -214,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,14 +293,42 @@
     "    act -- string, robots meant action\n",
     "    \"\"\"\n",
     "    #TODO 8\n",
-    "    pass"
+    "    row_index,column_index = loc\n",
+    "    if act == 'u':\n",
+    "        row_index = row_index-1\n",
+    "    elif act == 'd':\n",
+    "        row_index = row_index+1\n",
+    "    elif act == 'l':\n",
+    "        column_index = column_index-1\n",
+    "    elif act == 'r':\n",
+    "        column_index = column_index+1\n",
+    "        \n",
+    "    if row_index < 0 or row_index > rows - 1:\n",
+    "        return False\n",
+    "    if column_index < 0 or column_index > columns - 1:\n",
+    "        return False\n",
+    "    if env_data[row_index][column_index] == 2:\n",
+    "        return False\n",
+    "    return True"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      ".\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 1 test in 0.001s\n",
+      "\n",
+      "OK\n"
+     ]
+    }
+   ],
    "source": [
     "%run -i -e test.py RobotControllortTestCase.test_is_move_valid_special"
    ]
@@ -250,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,14 +358,42 @@
     "    act -- string, robots meant action\n",
     "    \"\"\"\n",
     "    #TODO 9\n",
-    "    pass"
+    "    row_index,column_index = loc\n",
+    "    if act == 'u':\n",
+    "        row_index = row_index-1\n",
+    "    elif act == 'd':\n",
+    "        row_index = row_index+1\n",
+    "    elif act == 'l':\n",
+    "        column_index = column_index-1\n",
+    "    elif act == 'r':\n",
+    "        column_index = column_index+1\n",
+    "        \n",
+    "    if row_index < 0 or row_index > rows - 1:\n",
+    "        return False\n",
+    "    if column_index < 0 or column_index > columns - 1:\n",
+    "        return False\n",
+    "    if env_data[row_index][column_index] == 2:\n",
+    "        return False\n",
+    "    return True"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      ".\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 1 test in 0.001s\n",
+      "\n",
+      "OK\n"
+     ]
+    }
+   ],
    "source": [
     "%run -i -e test.py RobotControllortTestCase.test_is_move_valid"
    ]
@@ -298,7 +419,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**回答：** （请在这里填写你的回答）"
+    "问题1:第一个env_data是引用了全局变量，第二个env_data因为和参数同名，所以在作用域上覆盖了全局的env_data\n",
+    "\n",
+    "问题2:不会，因为env_data_和env_data是两个不同的变量"
    ]
   },
   {
@@ -318,18 +441,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "## TODO 10 从头定义、实现你的函数"
+    "def valid_actions(env_data, loc):\n",
+    "    act_list = []\n",
+    "    if is_move_valid(env_data, loc, 'u'):\n",
+    "        act_list.append('u')\n",
+    "    if is_move_valid(env_data, loc, 'd'):\n",
+    "        act_list.append('d')\n",
+    "    if is_move_valid(env_data, loc, 'l'):\n",
+    "        act_list.append('l')\n",
+    "    if is_move_valid(env_data, loc, 'r'):\n",
+    "        act_list.append('r')\n",
+    "    return act_list    \n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      ".\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 1 test in 0.001s\n",
+      "\n",
+      "OK\n"
+     ]
+    }
+   ],
    "source": [
     "%run -i -e test.py RobotControllortTestCase.test_valid_actions"
    ]
@@ -349,18 +495,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "##TODO 11 从头定义、实现你的函数"
+    "##TODO 11 从头定义、实现你的函数\n",
+    "def move_robot(loc, act):\n",
+    "    if is_move_valid_special(loc, act):\n",
+    "        row_index,column_index = loc\n",
+    "        if act == 'u':\n",
+    "            row_index = row_index-1\n",
+    "        elif act == 'd':\n",
+    "            row_index = row_index+1\n",
+    "        elif act == 'l':\n",
+    "            column_index = column_index-1\n",
+    "        elif act == 'r':\n",
+    "            column_index = column_index+1\n",
+    "        return (row_index, column_index)\n",
+    "    else:\n",
+    "        return loc"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      ".\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 1 test in 0.001s\n",
+      "\n",
+      "OK\n"
+     ]
+    }
+   ],
    "source": [
     "%run -i -e test.py RobotControllortTestCase.test_move_robot"
    ]
@@ -387,18 +559,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "##TODO 12 从头实现你的函数"
+    "##TODO 12 从头实现你的函数\n",
+    "def random_choose_actions(env_data, robot_current_loc):\n",
+    "    for i in range(0, 300):\n",
+    "        row_index,column_index = robot_current_loc\n",
+    "        if env_data[row_index][column_index] == 3:\n",
+    "            print('在第{}个回合找到宝藏！'.format(i + 1))\n",
+    "            break\n",
+    "        else:\n",
+    "            act_list = valid_actions(env_data, robot_current_loc)\n",
+    "            act = random.choice(act_list)\n",
+    "            robot_current_loc = move_robot(robot_current_loc, act)\n",
+    "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "在第245个回合找到宝藏！\n"
+     ]
+    }
+   ],
    "source": [
     "# 运行\n",
     "random_choose_actions(env_data, robot_current_loc)"
@@ -434,11 +625,127 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0,8)\n",
+      "(1,8)\n",
+      "(1,7)\n",
+      "(2,7)\n",
+      "(2,6)\n",
+      "(3,6)\n",
+      "(3,5)\n",
+      "(4,5)\n",
+      "(4,4)\n",
+      "(4,3)\n",
+      "(3,3)\n",
+      "(3,2)\n",
+      "(2,2)\n",
+      "(2,1)\n",
+      "(1,1)\n",
+      "(1,0)\n",
+      "(0,0)\n"
+     ]
+    }
+   ],
    "source": [
-    "##TODO 13 实现你的算法"
+    "##TODO 13 实现你的算法\n",
+    "class Node(object):\n",
+    "\n",
+    "    def __init__(self):\n",
+    "        self.x = 0\n",
+    "        self.y = 0\n",
+    "        self.g = None\n",
+    "        self.h = None\n",
+    "        self.f = None\n",
+    "        self.type = 0\n",
+    "        self.parent = None\n",
+    "        self.closed = False\n",
+    "        \n",
+    "        \n",
+    "if __name__ == \"__main__\":\n",
+    "    \n",
+    "    # 转换地图为对象\n",
+    "    for row in range(0, len(env_data)):\n",
+    "        for column in range(0, len(env_data[row])):\n",
+    "            node = Node()\n",
+    "            node.x = column\n",
+    "            node.y = row\n",
+    "            node.type = env_data[row][column]\n",
+    "            graph[row][column] = node\n",
+    "\n",
+    "    start_y, start_x = loc_map['start']\n",
+    "    start_node = graph[start_y][start_x]\n",
+    "    start_node.f = 0\n",
+    "    start_node.g = 0\n",
+    "    start_node.h = 0\n",
+    "\n",
+    "    dst_y, dst_x = loc_map['destination']\n",
+    "    dst_node = graph[dst_y][dst_x]\n",
+    "\n",
+    "    open_list = [start_node]\n",
+    "\n",
+    "    while len(open_list) != 0:\n",
+    "\n",
+    "        current_node = open_list.pop(0)\n",
+    "\n",
+    "        current_node.closed = True\n",
+    "\n",
+    "        # 如果找到目标节点，则退出循环\n",
+    "        if current_node.x == dst_x and current_node.y == dst_y:\n",
+    "            break\n",
+    "\n",
+    "        # 找到该节点附近的可用节点\n",
+    "        neighbors_filter = []\n",
+    "        current_loc = (current_node.y, current_node.x)\n",
+    "        if is_move_valid_special(current_loc, 'u'):\n",
+    "            neighbors_filter.append(move_robot(current_loc, 'u'))\n",
+    "        if is_move_valid_special(current_loc, 'd'):\n",
+    "            neighbors_filter.append(move_robot(current_loc, 'd'))\n",
+    "        if is_move_valid_special(current_loc, 'l'):\n",
+    "            neighbors_filter.append(move_robot(current_loc, 'l'))\n",
+    "        if is_move_valid_special(current_loc, 'r'):\n",
+    "            neighbors_filter.append(move_robot(current_loc, 'r'))\n",
+    "\n",
+    "        # 转换坐标为node对象并添加到open_list准备遍历\n",
+    "        for neighbor_item in neighbors_filter:\n",
+    "            new_y, new_x = neighbor_item\n",
+    "            new_node = graph[new_y][new_x]\n",
+    "            # 过滤掉已经关闭或者是障碍物的节点\n",
+    "            if (new_node.closed is False) and (new_node.type != 2):\n",
+    "\n",
+    "                new_g = current_node.g + 10\n",
+    "                # 曼哈顿估计距离\n",
+    "                new_h = abs(current_node.y - dst_node.y) + abs(current_node.x - dst_node.x)\n",
+    "                new_f = new_g + new_h\n",
+    "\n",
+    "                if new_node.f is None or new_node.f > new_f:\n",
+    "                    new_node.g = new_g\n",
+    "                    new_node.h = new_h\n",
+    "                    new_node.f = new_f\n",
+    "                    new_node.parent = current_node\n",
+    "\n",
+    "                open_list.append(new_node)\n",
+    "\n",
+    "        # 按照f排序，让拥有最小f值的节点被优先处理\n",
+    "        open_list.sort(key=lambda node: node.f)\n",
+    "\n",
+    "    #已经找到最短路径\n",
+    "    path_list = [dst_node]\n",
+    "    iter_node = dst_node.parent\n",
+    "    while iter_node is not None:\n",
+    "        path_list.append(iter_node)\n",
+    "        iter_node = iter_node.parent\n",
+    "\n",
+    "    path_list.reverse()\n",
+    "\n",
+    "    for path_node in path_list:\n",
+    "        print(\"({},{})\".format(path_node.y, path_node.x))\n",
+    "    "
    ]
   },
   {
@@ -465,7 +772,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
