--- a/P1_Robot_Controller/Robot Controller.ipynb
+++ b/P1_Robot_Controller/Robot Controller.ipynb
@@ -68,7 +68,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "maze-id 1-1536317736\n",
+      "maze-id 1-1536389914\n",
       "[[3, 2, 2, 2, 2, 2, 2, 2, 1],\n",
       " [0, 0, 2, 2, 2, 2, 2, 0, 0],\n",
       " [2, 0, 0, 2, 2, 2, 0, 0, 2],\n",
@@ -212,10 +212,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# 使用review的建议，起点和终点位置动态获取，不固定写死在代码中。\n",
+    "# 定义起点/终点常量\n",
+    "START_VAL = 1\n",
+    "END_VAL = 3\n",
+    "# 获取机器人起点/终点坐标\n",
+    "def get_location(world, value):\n",
+    "    for x in range(rows):\n",
+    "        for y in range(columns):\n",
+    "            if world[x][y] == value:\n",
+    "                return(x, y)\n",
+    "#TODO 6按照上述要求创建字典\n",
     "loc_map = {\n",
-    "    'start':(0,8),\n",
-    "    'destination':(0,0)\n",
-    "} #TODO 6按照上述要求创建字典\n",
+    "    'start': get_location(env_data, START_VAL),\n",
+    "    'destination': get_location(env_data, END_VAL)\n",
+    "}\n",
     "\n",
     "robot_current_loc = loc_map['start'] #TODO 7保存机器人当前的位置"
    ]
@@ -231,7 +242,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.001s\n",
+      "Ran 1 test in 0.002s\n",
       "\n",
       "OK\n"
      ]
@@ -323,7 +334,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.001s\n",
+      "Ran 1 test in 0.002s\n",
       "\n",
       "OK\n"
      ]
@@ -388,7 +399,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.001s\n",
+      "Ran 1 test in 0.003s\n",
       "\n",
       "OK\n"
      ]
@@ -419,9 +430,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "问题1:第一个env_data是引用了全局变量，第二个env_data因为和参数同名，所以在作用域上覆盖了全局的env_data\n",
+    "问题1:第一个env_data是引用了全局变量，第二个env_data因为和参数同名，所以在作用域上覆盖了全局的env_data。\n",
     "\n",
-    "问题2:不会，因为env_data_和env_data是两个不同的变量"
+    "问题2:会改变env_data_的值，因为列表是可变类型，当把env_data作为参数传入is_move_valid后，实际上env_data和env_data_都引用同一块内存区域，所以会改变env_data_的值。"
    ]
   },
   {
@@ -470,7 +481,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.001s\n",
+      "Ran 1 test in 0.002s\n",
       "\n",
       "OK\n"
      ]
@@ -527,7 +538,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.001s\n",
+      "Ran 1 test in 0.002s\n",
       "\n",
       "OK\n"
      ]
@@ -586,7 +597,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "在第245个回合找到宝藏！\n"
+      "在第283个回合找到宝藏！\n"
      ]
     }
    ],
