--- a/P1_Robot_Controller/Robot Controller.ipynb
+++ b/P1_Robot_Controller/Robot Controller.ipynb
@@ -430,9 +430,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "问题1:第一个env_data是引用了全局变量，第二个env_data因为和参数同名，所以在作用域上覆盖了全局的env_data。\n",
+    "问题1:第一个``env_data``是引用了全局变量，第二个``env_data``因为和参数同名，所以在作用域上覆盖了全局的``env_data``。\n",
     "\n",
-    "问题2:会改变env_data_的值，因为列表是可变类型，当把env_data作为参数传入is_move_valid后，实际上env_data和env_data_都引用同一块内存区域，所以会改变env_data_的值。"
+    "问题2:会改变``env_data_``的值，因为列表是可变类型，当把``env_data``作为参数传入is_move_valid后，实际上``env_data``和``env_data_``都引用同一块内存区域，所以会改变``env_data_``的值。"
    ]
   },
   {
